--- a/app/src/main/res/drawable/banner_background.xml
+++ b/app/src/main/res/drawable/banner_background.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
-    <shape>
-        <solid android:color="@color/white"/>
-        <corners android:radius="18dp"/>
+    <shape android:shape="rectangle">
+        <corners android:radius="18sp"/>
+        <solid android:color="@color/principal_a4"/>
     </shape>
 </item>
 </selector>
