--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:text="Registro de Sesión"
                 android:textAlignment="center"
-                android:textColor="#00BCD4"
+                android:textColor="@color/principal"
                 android:textSize="34sp"
                 android:textStyle="bold" />
 
@@ -65,7 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:backgroundTint="#00BCD4"
+                android:backgroundTint="@color/principal_a1"
                 android:text="Iniciar Sesión"
                 android:textSize="20sp"
                 app:cornerRadius="20dp"/>
@@ -75,22 +75,26 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="267dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/custom_edittext"
+        android:backgroundTint="@color/principal"
         android:text="¿Aun no estas registrado?"
         android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="24sp"
+        android:textColor="@color/white"
+        android:textSize="19sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/lblRegistrar"
-        android:layout_width="match_parent"
+        android:layout_width="228dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-2dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/custom_edittext"
+        android:backgroundTint="@color/principal"
         android:text="Registrate Ahora"
         android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="24sp"
+        android:textColor="@color/white"
+        android:textSize="19sp"
         android:textStyle="bold" />
 </LinearLayout>
