--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -13,7 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
-        android:background="@drawable/login"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp">
 
@@ -28,9 +27,9 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Registro de Sesión"
+                android:text="Inicio de Sesión"
                 android:textAlignment="center"
-                android:textColor="@color/principal"
+                android:textColor="#B77400"
                 android:textSize="34sp"
                 android:textStyle="bold" />
 
@@ -65,7 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:backgroundTint="@color/principal_a1"
+                android:backgroundTint="#B77400"
                 android:text="Iniciar Sesión"
                 android:textSize="20sp"
                 app:cornerRadius="20dp"/>
@@ -78,7 +77,7 @@
         android:layout_width="267dp"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_edittext"
-        android:backgroundTint="@color/principal"
+        android:backgroundTint="#B77400"
         android:text="¿Aun no estas registrado?"
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -91,7 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/custom_edittext"
-        android:backgroundTint="@color/principal"
+        android:backgroundTint="#B77400"
         android:text="Registrate Ahora"
         android:textAlignment="center"
         android:textColor="@color/white"
