--- a/app/src/main/res/layout/activity_publicar.xml
+++ b/app/src/main/res/layout/activity_publicar.xml
@@ -29,7 +29,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="643dp"
+                android:layout_height="650dp"
                 android:layout_gravity="center_horizontal"
                 android:orientation="vertical"
                 android:padding="24dp">
@@ -40,7 +40,7 @@
                     android:layout_height="58dp"
                     android:text="Publicar"
                     android:textAlignment="center"
-                    android:textColor="@color/principal"
+                    android:textColor="#B77400"
                     android:textSize="36sp"
                     android:textStyle="bold" />
 
@@ -58,7 +58,7 @@
                             android:id="@+id/btnCancelar"
                             android:layout_width="wrap_content"
                             android:layout_height="60dp"
-                            android:backgroundTint="@color/principal_a1"
+                            android:backgroundTint="#2B2E74"
                             android:text="CANCELAR"
                             android:textSize="18sp"
                             app:cornerRadius="20dp"
@@ -67,7 +67,7 @@
                             app:layout_constraintHorizontal_bias="0.041"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.911" />
+                            app:layout_constraintVertical_bias="1" />
 
                         <Button
                             android:id="@+id/btnpublicar"
@@ -79,8 +79,8 @@
                             app:layout_constraintHorizontal_bias="0.483"
                             app:layout_constraintStart_toEndOf="@+id/btnCancelar"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.911"
-                            tools:backgroundTint="@color/principal_a1"
+                            app:layout_constraintVertical_bias="1"
+                            tools:backgroundTint="#2B2E74"
                             tools:cornerRadius="20dp"
                             tools:textSize="18sp" />
 
@@ -89,10 +89,11 @@
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:background="@drawable/custom_edittext"
+                            android:drawableLeft="@drawable/baseline_apartment_24"
                             android:drawablePadding="8dp"
                             android:ems="10"
                             android:hint="Título de Trabajo"
-                            android:inputType="textPassword"
+                            android:inputType="text"
                             android:padding="8dp"
                             android:textColor="@color/black"
                             android:textColorHighlight="@color/cardview_dark_background"
@@ -104,14 +105,15 @@
                             app:layout_constraintVertical_bias="0.06" />
 
                         <EditText
-                            android:id="@+id/txtDireccion"
+                            android:id="@+id/txtNumeroContacto"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:background="@drawable/custom_edittext"
+                            android:drawableLeft="@drawable/baseline_phone_iphone_24"
                             android:drawablePadding="8dp"
                             android:ems="10"
-                            android:hint="Dirección"
-                            android:inputType="textPassword"
+                            android:hint="Número Contacto"
+                            android:inputType="phone"
                             android:padding="8dp"
                             android:textColor="@color/black"
                             android:textColorHighlight="@color/cardview_dark_background"
@@ -123,14 +125,15 @@
                             app:layout_constraintVertical_bias="0.189" />
 
                         <EditText
-                            android:id="@+id/txtPago"
+                            android:id="@+id/txtDireccion"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:background="@drawable/custom_edittext"
+                            android:drawableLeft="@drawable/baseline_location_on_24"
                             android:drawablePadding="8dp"
                             android:ems="10"
-                            android:hint="Pago"
-                            android:inputType="textPassword"
+                            android:hint="Dirección"
+                            android:inputType="text"
                             android:padding="8dp"
                             android:textColor="@color/black"
                             android:textColorHighlight="@color/cardview_dark_background"
@@ -140,6 +143,26 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintVertical_bias="0.316" />
+
+                        <EditText
+                            android:id="@+id/txtPago"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:background="@drawable/custom_edittext"
+                            android:drawableLeft="@drawable/baseline_apartment_24"
+                            android:drawablePadding="8dp"
+                            android:ems="10"
+                            android:hint="Pago"
+                            android:inputType="numberSigned"
+                            android:padding="8dp"
+                            android:textColor="@color/black"
+                            android:textColorHighlight="@color/cardview_dark_background"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintVertical_bias="0.443" />
 
                         <EditText
                             android:id="@+id/txtDescripcionNec"
@@ -158,7 +181,7 @@
                             app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.638" />
+                            app:layout_constraintVertical_bias="0.820" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
