--- a/app/src/main/res/drawable/orange_midle_buttons.xml
+++ b/app/src/main/res/drawable/orange_midle_buttons.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape>
-        <solid android:color="@color/white"/>
+        <solid android:color="#002659"/>
         <corners android:radius="18dp"/>
     </shape>
 </item>
