--- a/app/src/main/res/drawable/orange_top_buttons.xml
+++ b/app/src/main/res/drawable/orange_top_buttons.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
-    <shape android:shape="rectangle">
-        <solid android:color="#F6A700"/>
-        <corners android:radius="50dp"/>
+    <shape>
+        <solid android:color="#B77400"/>
+        <corners android:radius="18dp"/>
     </shape>
 </item>
 </selector>
