--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="40dp"
                     android:layout_marginEnd="40dp"
-                    android:background="@drawable/white_top_buttons"
+                    android:background="@drawable/orange_top_buttons"
                     android:elevation="4dp"
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView2"
@@ -184,7 +184,7 @@
                 android:ems="10"
                 android:inputType="text"
                 android:hint="Buscar..."
-                android:drawableEnd="@drawable/search_icon"/>
+                android:drawableEnd="@drawable/baseline_search_24"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -197,8 +197,8 @@
 
                 <ImageView
                     android:id="@+id/imageView7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="152dp"
+                    android:layout_height="90dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -220,10 +220,10 @@
                     android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/white_top_buttons"
+                    android:background="@drawable/orange_midle_buttons"
                     android:text="Registrate"
                     android:textStyle="bold"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                     app:layout_constraintEnd_toEndOf="@+id/textView7"
@@ -253,7 +253,7 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:background="@drawable/white_top_buttons">
+                            android:background="@drawable/orange_top_buttons">
 
                             <ImageView
                                 android:id="@+id/imageView8"
@@ -293,7 +293,7 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:background="@drawable/white_top_buttons">
+                            android:background="@drawable/orange_top_buttons">
 
                             <ImageView
                                 android:id="@+id/imageView9"
@@ -333,7 +333,7 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:background="@drawable/white_top_buttons">
+                            android:background="@drawable/orange_top_buttons">
 
                             <ImageView
                                 android:id="@+id/imageView10"
@@ -373,7 +373,7 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:background="@drawable/white_top_buttons">
+                            android:background="@drawable/orange_top_buttons">
 
                             <ImageView
                                 android:id="@+id/imageView11"
@@ -419,7 +419,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:background="@drawable/white_top_buttons">
+                            android:background="@drawable/orange_top_buttons">
 
                             <ImageView
                                 android:id="@+id/imageView12"
@@ -459,7 +459,7 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:background="@drawable/white_top_buttons">
+                            android:background="@drawable/orange_top_buttons">
 
                             <ImageView
                                 android:id="@+id/imageView13"
@@ -499,7 +499,7 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:background="@drawable/white_top_buttons">
+                            android:background="@drawable/orange_top_buttons">
 
                             <ImageView
                                 android:id="@+id/imageView14"
@@ -538,7 +538,7 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/white_top_buttons">
+                            android:background="@drawable/orange_top_buttons">
 
                             <ImageView
                                 android:id="@+id/imageView15"
